--- a/templates/products.html
+++ b/templates/products.html
@@ -122,6 +122,11 @@
                 </section>
             </article>
         </section>
+        <a href="https://api.whatsapp.com/send?phone=5491175049581&text=¡Hola,%20me%20gustaría%20recibir
+        %20más%20información!"><i class="fa-brands fa-whatsapp icon-wsp"></i></a>
+        <div id="scrolltop">
+            <a class="top-button" href="#top"><i class="fa-solid fa-chevron-up"></i></a>
+        </div>
     </main>
     <footer>
         <div class="container">
