--- a/static/css/products.css
+++ b/static/css/products.css
@@ -73,14 +73,18 @@ a {
 }
 
 main {
+    width: 100vw;
     position: relative;
-    top: 25vw;
+    padding-top: 1em;
+    top: 21vw;
     left: 0;
+    overflow-y: hidden;
 }
 
 footer {
+    width: 100vw;
     position: relative;
-    top: 315vw;
+    top: 25vw;
 }
 
 
@@ -117,6 +121,7 @@ footer {
     position: fixed;
     bottom: 10px;
     right: 10px;
+    z-index: 1;
 
     visibility: visible;
     background-color: var(--secondary-color);
@@ -129,7 +134,7 @@ footer {
 /********************************** NAVBAR *************************/
 
 nav {
-    width: 100%;
+    width: 100vw;
     height: 5em;
     padding: 0.9em 1.2em;
 
