--- a/static/css/comprar.css
+++ b/static/css/comprar.css
@@ -77,21 +77,10 @@ a {
     text-decoration: none;
 }
 
-main {
-    position: relative;
-    top: 20vw;
-    left: 0;
-}
-
-footer {
-    position: relative;
-    top: 84vw;
-}
-
 /********************************** NAVBAR *************************/
 nav {
     width: 100vw;
-    height: 5em;
+    height: 9vh;
     padding: 0.9em 1.2em;
 
     position: fixed;
@@ -227,21 +216,23 @@ nav .navCloseBtn {
 }
 
 /********************************** FORM COMPRA *************************/
+#form-compra {
+    margin: 6em 0;
+}
 .titulo-form-compra {
+    margin: 1em 0;
     text-align: center;
 }
 
 form {
     width: 100vw;
-    border: 2px solid green;
 }
 
 .marcador-step {
-    padding: 1em;
-
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap: 3em;
 }
 
 .marcador-step li {
@@ -261,18 +252,46 @@ form {
 }
 
 .step {
+    width: 90vw;
     margin: 2em auto;
+    padding: 1em 1.5em;
 
+    text-align: center;
+    
+    background-color: var(--primary-color);
+    border-radius: .5em;
+    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.6);
     display: none;
 }
+
 .active {
     display: block;
 }
 
-/* box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); */
+.input-datos-personales {
+    width: 100%;
+    height: 3em;
 
+    padding: .8em;
 
+    border: 1px solid var(--third-color);
+    border-radius: .5em;
 
+    margin: 1em 0;
+}
+
+.btn-step {
+    padding: .5em 4em;
+
+    font-family: var(--third-font);
+    font-weight: 500;
+    font-size: 1em;
+
+    border: none;
+    border-radius: .5em;
+    background-color: var(--secondary-color);
+    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.2);
+}
 
 .hidden {
     display: none;
@@ -280,9 +299,11 @@ form {
 
 /************************** FOOTER ********************************/
 .container {
+    width: 100vw;
+
     margin: 0 auto;
     padding: 1.5rem;
-    width: 100vw;
+
     background-color: var(--third-color);
     text-align: center;
     color: var(--bg-light);
@@ -293,14 +314,19 @@ form {
 }
 
 .footer-links {
+    margin-top: 1.5em;
+    padding-top: 1em;
+
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: .5em;
-    margin-top: 1.5em;
+    gap: 2em;
+    
     color: var(--bg-light);
     font-weight: 700;
+    font-size: .8em;
+    border-top: 1px solid var(--bg-light);
 }
 
 .footer-links a {
