--- a/static/css/tienda..css
+++ b/static/css/tienda..css
@@ -76,7 +76,7 @@ main {
     width: 100vw;
     position: relative;
     padding-top: 1em;
-    top: 21vw;
+    top: 18vw;
     left: 0;
     overflow-y: hidden;
 }
@@ -95,7 +95,6 @@ footer {
     position: fixed;
     bottom: 10px;
     left: 15px;
-    z-index: 1;
 
     visibility: visible;
     opacity: 1;
@@ -121,7 +120,6 @@ footer {
     position: fixed;
     bottom: 10px;
     right: 10px;
-    z-index: 1;
 
     visibility: visible;
     background-color: var(--secondary-color);
@@ -171,7 +169,7 @@ nav .nav-links {
     transition: all 0.4s ease;
 }
 
-nav ul ~ div {
+nav ul~div {
     display: flex;
     align-items: center;
     gap: 1em;
@@ -315,6 +313,88 @@ nav .navCloseBtn {
     font-weight: 700;
 }
 
+/********************************** FILTROS *************************/
+.btn-filtros {
+    display: flex;
+    align-items: center;
+
+    background-color: var(--bg-light);
+    color: var(--bg-dark);
+
+    font-size: .9em;
+    font-family: var(--secondary-font);
+    font-weight: 700;
+
+    border: none;
+
+    cursor: pointer;
+}
+
+.btn-filtros i {
+    margin-left: .5em;
+    font-size: 1.2em;
+}
+
+/* Estilo del modal filtros */
+.filtros {
+    height: 100vh;
+    padding-top: 3em;
+
+    width: 0vw;
+    position: fixed;
+    z-index: 5;
+    top: 0;
+    left: 0;
+
+    background-color: #ffd8a1ea;
+    overflow-y: auto;
+    transition: 0.5s;
+}
+
+.filtros-content {
+    position: relative;
+    padding: 1.2em;
+}
+
+.close-button {
+    position: absolute;
+    top: -1em;
+    right: 1em;
+
+    font-size: 1em;
+    cursor: pointer;
+}
+
+.close-button:hover {
+    color: #aaa;
+}
+
+.products-filter {
+    width: 100%;
+    margin-bottom: 1em;
+    padding: .2em;
+    padding-bottom: 1em;
+    gap: 1em;
+
+    font-weight: 700;
+    color: var(--bg-dark);
+
+    border-bottom: 1px solid var(--bg-dark);
+}
+
+.products-filter-dropdown {
+    width: 70%;
+    height: 2em;
+
+    background-color: var(--bg-light);
+    outline: none;
+    border: none;
+    border-radius: .2em;
+
+    font-family: var(--third-font);
+    font-size: 1.1em;
+}
+
 /********************************** CARRITO DE COMPRAS *************************/
 /************************** Botón ********************************/
 .container-icon {
@@ -364,6 +444,7 @@ nav .navCloseBtn {
 
 .container-cart-products {
     width: 95vw;
+    max-height: 50vh;
 
     position: absolute;
     top: 10vw;
@@ -375,6 +456,11 @@ nav .navCloseBtn {
     border-radius: .5em;
 
     overflow-y: auto;
+}
+
+.carrito-items {
+    max-height: 9em;
+    overflow-y: scroll;
 }
 
 .cart-product {
@@ -507,67 +593,55 @@ nav .navCloseBtn {
     margin-bottom: 1em;
 }
 
-/********************************** FILTROS *************************/
-.filters {
-    display: flex;
-    justify-content: space-between;
-
-    padding: .5em;
-}
-
-.products-filter {
-    width: 100%;
-    padding: .2em;
-    gap: 1em;
-
-    font-weight: 700;
-    color: var(--bg-dark);
-}
-
-.products-filter-dropdown {
-    width: 80%;
-    height: 2em;
-
-    background-color: var(--primary-color);
-    outline: none;
-    border: none;
-    border-radius: .2em;
-
-    font-family: var(--third-font);
-    font-size: 1.1em;
-}
-
-.btn-price {
-    padding: 0 .7em;
-
-    background-color: var(--primary-color);
-    color: var(--bg-dark);
-    outline: none;
-    border: 1px solid var(--secondary-color);
-    border-radius: .3em;
-}
-
-
 /********************************** PRODUCTOS *************************/
+#pagination {
+    text-align: center;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 3em;
+}
+
+.page-btn {
+    margin: 0 5px;
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+#pagination span {
+    margin: 0 .2em;
+    padding: .3em .5em;
+    color: var(--bg-dark);
+}
+
+
 .contenedor-items {
     width: 100vw;
+
+    padding: 1em;
+
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: .5em;
     column-gap: .5em;
-    padding: 1em;
 }
 
 .producto {
     height: 20em;
-    border-radius: 10px;
+    padding: .5em;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: .5em;
-    transition: all 0.4s ease;
+
     font-family: var(--third-font);
     text-align: center;
+    border-radius: 10px;
+
+    transition: all 0.4s ease;
 }
 
 .product-card:hover {
@@ -578,6 +652,9 @@ nav .navCloseBtn {
 .img-item {
     width: 100%;
     height: 12em;
+
+    margin: 0 auto;
+
     object-fit: cover;
     border-radius: 10px 10px 0 0;
     transition: all .5s;
@@ -605,12 +682,14 @@ nav .navCloseBtn {
 
     margin-top: 1em;
 }
+
 .boton-item {
     width: 60%;
     padding: .6em 0;
 
     text-align: center;
     text-transform: uppercase;
+    font-family: var(--third-font);
     font-size: .8em;
     font-weight: bolder;
 
@@ -651,9 +730,11 @@ nav .navCloseBtn {
 
 /************************** FOOTER ********************************/
 .container {
+    width: 100vw;
+
     margin: 0 auto;
     padding: 1.5rem;
-    width: 100vw;
+
     background-color: var(--third-color);
     text-align: center;
     color: var(--bg-light);
@@ -664,20 +745,24 @@ nav .navCloseBtn {
 }
 
 .footer-links {
+    margin-top: 1.5em;
+    padding-top: 1em;
+
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: .5em;
-    margin-top: 1.5em;
+    gap: 2em;
+    
     color: var(--bg-light);
     font-weight: 700;
+    font-size: .8em;
+    border-top: 1px solid var(--bg-light);
 }
 
 .footer-links a {
     color: var(--bg-light);
 }
-
 
 @media only screen and (min-width: 768px) and (max-width: 1279px) {
     main {
