--- a/templates/comprar.html
+++ b/templates/comprar.html
@@ -62,41 +62,66 @@
                 </ul>
                 <div id="step1" class="step active">
                     <h2>Datos Personales</h2>
-                    <div class="">
-                        <div class="">
-                            <div class="">
-                                <input type="text" name="nombre-completo" class=""
-                                    placeholder="Nombre completo" required>
-                            </div>
+                    <div class="step-content">
+                        <div>
+                            <label for="nombre-completo">Nombre Completo:</label>
+                            <input type="text" name="nombre-completo" class="input-datos-personales"
+                                placeholder="Nombre completo" required>
+                        </div>
+                        <div>
+                            <label for="nombre-completo">Correo electrónico:</label>
+                            <input type="email" name="email" class="input-datos-personales" placeholder="Correo electrónico"
+                                required>
+                        </div>
+                        <div>
+                            <label for="nombre-completo">Teléfono de contacto:</label>
+                            <input type="number" name="telefono" class="input-datos-personales" placeholder="Teléfono"
+                                required>
                         </div>
                     </div>
-                    <div class="">
-                        <div class="">
-                            <div class="">
-                                <input type="email" name="email" class="" placeholder="Correo electrónico"
-                                    required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="">
-                        <div class="">
-                            <div class="">
-                                <input type="number" name="telefono" class="" placeholder="Teléfono"
-                                    required>
-                            </div>
-                        </div>
-                    </div>
-                    <button type="button" onclick="nextStep()">Confirmar</button>
+                    <button type="button" onclick="nextStep()" class="btn-step">Confirmar</button>
                 </div>
                 <div id="step2" class="step">
                     <h2>Paso 2</h2>
-                    <p><input type="email" placeholder="Introduce tu correo electrónico"></p>
-                    <button type="button" onclick="nextStep()">Confirmar</button>
+                    <div class="step-content">
+                        <div>
+                            <label for="nombre-completo">Nombre Completo:</label>
+                            <input type="text" name="nombre-completo" class="input-datos-personales"
+                                placeholder="Nombre completo" required>
+                        </div>
+                        <div>
+                            <label for="nombre-completo">Correo electrónico:</label>
+                            <input type="email" name="email" class="input-datos-personales" placeholder="Correo electrónico"
+                                required>
+                        </div>
+                        <div>
+                            <label for="nombre-completo">Teléfono de contacto:</label>
+                            <input type="number" name="telefono" class="input-datos-personales" placeholder="Teléfono"
+                                required>
+                        </div>
+                    </div>
+                    <button type="button" onclick="nextStep()" class="btn-step">Confirmar</button>
                 </div>
                 <div id="step3" class="step">
                     <h2>Paso 3</h2>
-                    <p><input type="password" placeholder="Crea una contraseña"></p>
-                    <button type="button" onclick="">Confirmar</button>
+                    <div class="step-content">
+                        <div>
+                            <label for="nombre-completo">Nombre Completo:</label>
+                            <input type="text" name="nombre-completo" class="input-datos-personales"
+                                placeholder="Nombre completo" required>
+                        </div>
+                        <div>
+                            <label for="nombre-completo">Correo electrónico:</label>
+                            <input type="email" name="email" class="input-datos-personales" placeholder="Correo electrónico"
+                                required>
+                        </div>
+                        <div>
+                            <label for="nombre-completo">Teléfono de contacto:</label>
+                            <input type="number" name="telefono" class="input-datos-personales" placeholder="Teléfono"
+                                required>
+                        </div>
+                    </div>
+                    <button type="button" onclick="" class="btn-step">Confirmar</button>
                 </div>
             </form>
         </section>
